2020-07-07 Shahzad Muzaffar  <@smuzaffar>
	V05-10-22: Fix build log rules to avoid rebuild of products
2020-07-05 Roman Tulinov <@tulamor>
	V05-10-20, V05-10-21: Rewrite projectAreaRename using python.
2020-07-03 Shahzad Muzaffar  <@smuzaffar>
	V05-10-16: updateConfig migrated to python.
2020-07-02 Shahzad Muzaffar  <@smuzaffar>
	V05-10-14-01: Use -I instead of -isystem for cuda host flags
2020-07-01 Shahzad Muzaffar  <@smuzaffar>
	V05-10-14: Fix extra line for clang-tidy check
	performance-inefficient-vector-operation.
	V05-10-15: updateConfig migrated to python.
2020-06-25 Shahzad Muzaffar  <@smuzaffar>
	V05-10-13: Make sure the build logs are saved in between two build
	runs
2020-06-20 Shahzad Muzaffar  <@smuzaffar>
	V05-10-12: Another fix for generating dependencies files.
2020-06-13 Shahzad Muzaffar  <@smuzaffar>
	V05-10-11: Bug fix for generating dependencies files.
2020-06-12 Shahzad Muzaffar  <@smuzaffar>
	V05-10-10: Use -isystem instead of -I for include paths if tools sets
	<flags SYSTEM_INCLUDe="1"/>
2020-06-09 Shahzad Muzaffar  <@smuzaffar>
	V05-10-09: Bug fix, make sure the compiler output goes to a log file
2020-06-07 Shahzad Muzaffar  <@smuzaffar>
	V05-10-07: Bug fix for patch release: Use full release base path to
	collect modulemaps.
	V05-10-08: Copy package's modulemap file locally.
2020-06-04 Roman Tulinov <@tulamor>
	V05-10-06: Convert findDependencies.pl to python
2020-05-28 Shahzad Muzaffar  <@smuzaffar>
	V05-10-05: Disable vectorization by default.
	Added enable/disable/check-vectorize targets.
	Bug fix: create symlinks for r_dict.pcm for vectorize libs
	USER_VECTORIZE_ALL=1 to enable vectorization for all libs/plugins
2020-05-27 Shahzad Muzaffar  <@smuzaffar>
	V05-10-04: ROOTCLING_ARGS support added. Now toolfiles can set
	ROOTCLING_ARGS flag which will pass to rootcling command for
	modules generations.
	Bug fix for vectorization: make sure to it only run for selected libs.
2020-05-25 Shahzad Muzaffar  <@smuzaffar>