@@ -1,3 +1,5 @@
+2020-07-09 Shahzad Muzaffar  <@smuzaffar>
+	V05-10-23: Added back projectAreaRename.pl
 2020-07-07 Shahzad Muzaffar  <@smuzaffar>
 	V05-10-22: Fix build log rules to avoid rebuild of products
 2020-07-05 Roman Tulinov <@tulamor>
